--- a/package.json
+++ b/package.json
@@ -49,11 +49,24 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.29.3",
     "eslint-plugin-react-hooks": "4.3.0",
+    "husky": "^7.0.4",
     "jest": "27.2.3",
+    "lint-staged": "^12.3.7",
     "nx": "13.9.6",
+    "plop": "^3.0.5",
     "prettier": "^2.5.1",
     "react-test-renderer": "17.0.2",
     "ts-jest": "27.0.5",
     "typescript": "~4.5.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js, jsx, tsx, json, md, ts}": [
+      "yarn format --uncommitted"
+    ]
   }
 }
