--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "4.17.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-game-engine": "^1.1.0",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
   },
